manifests/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: <app-name>
  labels:
    app: <app-name>
  namespace: <app-namespace>
spec:
  selector:
    app: <app-name>
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 0000
      targetPort: 0000
